force-app/main/default/objects/Formateur__c/Formateur__c.object-meta.xml
<CustomObject>
    <label>Formateur</label>
    <nameField>
        <label>Formateur Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formateurs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>