force-app/main/default/objects/Formateur__c/fields/Contrat__c.field-meta.xml
<CustomField>
    <fullName>Contrat__c</fullName>
    <label>Contrat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interne</fullName>
            </value>
            <value>
                <fullName>Indépendant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>