force-app/main/default/objects/Formateur__c/fields/Formateur_Email__c.field-meta.xml
<CustomField>
    <fullName>Formateur_Email__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Formateur Email</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>