force-app/main/default/objects/Formateur__c/fields/Formateur_Phone__c.field-meta.xml
<CustomField>
    <fullName>Formateur_Phone__c</fullName>
    <label>Formateur Phone</label>
    <type>Phone</type>
</CustomField>